# nvidia-benchmark

./: .gitignore  README.md  ReadME_cn.md
docs/: Nvidia_A2_benchmark.xlsx
pytorch/resnet/: README.md
pytorch/resnet/resnet50/: gluoncv_resnet50.py
pytorch/yolov3/: requirements.txt
pytorch/yolov3/utils/: utils.py
tensorrt/resnet50/: CMakeLists.txt  README.md  calibrator.cpp  calibrator.h  data_reader  data_reader.cpp  data_reader.hpp  log_time.hpp  preprocess.cu  resnet50.cpp  val_labels.txt
tensorrt/retinaface/: CMakeLists.txt  README.md  decode.h  retina_mnet.cpp  retina_r50.cpp  retinaface_trt.py
tensorrt/yolov3/: CMakeLists.txt  README.md  calibrator.cpp  calibrator.h  common.hpp  data_reader.cpp  data_reader.hpp  eval_model.cpp  eval_model.hpp  gen_wts.py  monitor.h  preprocess.cu  utils.h  yololayer.cu  yololayer.h  yolov3.cpp
tensorrt/yolov5/: CMakeLists.txt  multi_processor_test.py  yololayer.h  yolov5_trt.py  yolov5_trt_multi.py
